Task5/non-admin-api-allow.yaml
# Запрет всего входящего трафика в namespace по умолчанию
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: propdevelopment
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
# Разрешить входящий трафик к back-end-api только от front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-end-api-allow-from-front-end
  namespace: propdevelopment
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end

---
# Разрешить входящий трафик к admin-back-end-api только от admin-front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-back-end-api-allow-from-admin-front-end
  namespace: propdevelopment
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
